--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@use-gesture/react": "^10.2.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
+    "react-three-fiber": "^6.0.13",
+    "react-use-gesture": "^9.1.3",
     "simplebar-react": "^2.4.3",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
