--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,8 @@
-name: Build and Deploy
+name: Build and Deploy StoryBook
 on: 
   push:
-    paths: ["stories/**", "src/components/**"] # Trigger the action only when files change in the folders defined here
+    branches:
+      - "main"
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
