--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,9 +12,7 @@ jobs:
         with:
           persist-credentials: false
       - name: Install
-        run: rm package-lock.json
-      - name: Install
-        run: CI=false npm install
+        run: rm package-lock.json && CI=false npm install
       - name:  Build 🔧
         run: npm run build-storybook
       - name: Deploy 🚀
