--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sb": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -o docs-build -s ./stories/assets"
+    "build-storybook": "build-storybook -o docs-build"
   },
   "storybook-deployer": {
     "gitUsername": "GH Pages Bot",
