--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,8 @@ jobs:
       - run: yarn build-storybook
       - run: rm -rf docs/assets 
       - run: cp -r public/assets docs
+      - run: ls -la 
+      - run: ls -la docs
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
