--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uikit",
+  "name": "server-os-uikit",
   "description": "UIKit for server os",
   "author": "egorkaBurkenya <sleepyegorka@gmail.com>, nik19ta <nik19ta.me@gmail.com>",
   "keywords": ["react", "components", "ui", "uikit", "server-os"],
