--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "react-three-fiber": "^6.0.13",
     "react-use-gesture": "^9.1.3",
     "simplebar-react": "^2.4.3",
+    "vite-plugin-css-modules": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "vite:start": "vite",
     "build": "react-scripts build",
     "vite:build": "vite build",
     "test": "react-scripts test",
@@ -107,6 +109,8 @@
     "typescript": "^4.8.4",
     "typings-for-css-modules-loader": "^1.7.0",
     "vite": "^4.0.3",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.3",
     "vitest": "^0.26.2",
     "webpack": "^5.74.0"
   }
