--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "plugins": [
       { "name": "typescript-plugin-css-modules" }
     ],
+    "types": ["vite/client", "vite-plugin-svgr/client"],
     "target": "es5",
     "lib": [
       "dom",
