--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "uikit",
     "server-os"
   ],
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": false,
   "main": "dist/uikit.es.js",
   "module": "dist/uikit.es.js",
   "files": [
     "dist",
-    "README.md",
-    "src/UIKit"
+    "README.md"
   ],
   "repository": {
     "type": "git",
@@ -38,7 +37,7 @@
     "start": "react-scripts start",
     "vite:start": "vite",
     "build": "react-scripts build",
-    "vite:build": "vite build",
+    "vite:build": "vite build && tsc && cp package.json README.md ./dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sb": "start-storybook -p 6006 -s public",
