--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "declaration": true,
+    "outDir": "dist",
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
