--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "uikit",
     "server-os"
   ],
-  "version": "0.1.4",
+  "version": "0.1.6",
   "private": false,
   "main": "dist/uikit.es.js",
   "module": "dist/uikit.es.js",
+  "typings": "dist/index.d.ts",
   "files": [
     "dist",
     "README.md"
@@ -31,13 +32,14 @@
     "react-use-gesture": "^9.1.3",
     "simplebar-react": "^2.4.3",
     "vite-plugin-css-modules": "^0.0.1",
+    "vite-plugin-dts": "^1.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "vite:start": "vite",
     "build": "react-scripts build",
-    "vite:build": "vite build && tsc && cp package.json README.md ./dist",
+    "vite:build": "vite build && tsc  && cp package.json README.md ./dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sb": "start-storybook -p 6006 -s public",
