--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
+    "paths": {
+      "types": ["types"],
+      "*": [
+          "src/lib/index.tsx",
+          "src/typings/*" // this will make the typescript compiler find the type file
+      ]
+    },
     "plugins": [
       { "name": "typescript-plugin-css-modules" }
     ],
@@ -10,6 +18,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "sourceMap": true,
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -21,13 +30,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "declaration": true,
-    "outDir": "dist",
+    "outDir": "dist1",
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx"
   },
   "include": [
     "./src/**/*.tsx",
-    "./src/**/*.ts"
+    "./src/**/*.ts",
+    "./src/**/*.d.ts"
   ]
 }
